# nacre

./: .gitignore  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  release-please-config.json  schema.json
.github/workflows/: release.yml
src/branch_materializer/: __init__.py  cli.py  config.py  git_ops.py  materialize.py
src/nacre/: __init__.py  cli.py  config.py  git_ops.py  materialize.py  repository.py
tests/: test_config.py  test_e2e.py  test_materialize_git.py
