[project]
name = "nacre"
version = "0.1.0"
description = "Materialize Git branches from declarative layered specs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings[yaml]>=2.6",
]

[project.scripts]
nacre = "nacre.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nacre"]

[tool.pytest.ini_options]
testpaths = ["tests"]
